--- a/parsing-with-beautifulsoup-and-scrapy.ipynb
+++ b/parsing-with-beautifulsoup-and-scrapy.ipynb
@@ -34,6 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```html\n",
     "<!DOCTYPE html>\n",
     "<html>\n",
     "    <head>\n",
@@ -63,7 +64,8 @@
     "        </p>        \n",
     "        \n",
     "    </body>    \n",
-    "</html>"
+    "</html>\n",
+    "```"
    ]
   },
   {
